[package]
name = "broadcaster-viewer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "broadcaster-viewer"
path = "src/main.rs"

[dependencies]
# Pinned GUI stack (pre-1.0; keep exact pins and narrow API use).
gpui = { workspace = true }
gpui-component = { workspace = true }

# Async runtime / CLI / diagnostics.
eyre = { workspace = true }
humantime = "2"
structopt = "0.3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }

# Diagnostic profiling endpoint (ported from liquidator-rust/utils/src/pprof.rs).
axum = "0.8"
pprof = { version = "0.15", default-features = false, features = ["flamegraph", "prost-codec", "frame-pointer"] }
serde = { workspace = true }
serde_urlencoded = "0.7"

# Local crates.
broadcaster-monitor = { path = "../../crates/broadcaster-monitor" }
broadcaster-monitor-gpui = { path = "../../crates/broadcaster-monitor-gpui" }
broadcaster-monitor-waku = { path = "../../crates/broadcaster-monitor-waku" }
ui = { path = "../../crates/ui" }

[lints]
workspace = true
