[package]
name = "db-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
eyre = { workspace = true }
hex = "0.4"
rmp-serde = "1.3"
redb = "3.1"
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { version = "0.3" }

local-db = { path = "../../crates/local-db" }
