[package]
name = "wallet-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { version = "0.3" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot"] }

broadcaster-core = { path = "../../crates/core" }
local-db = { path = "../../crates/local-db" }
merkletree = { path = "../../crates/merkletree" }
railgun-wallet = { path = "../../crates/railgun-wallet" }
sync-service = { path = "../../crates/sync-service" }
