[package]
name = "wallet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
eyre = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
reqwest = { workspace = true }
structopt = "0.3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }

broadcaster-monitor = { path = "../../crates/broadcaster-monitor" }
broadcaster-monitor-gpui = { path = "../../crates/broadcaster-monitor-gpui" }
broadcaster-monitor-waku = { path = "../../crates/broadcaster-monitor-waku" }
railgun-ui = { path = "../../crates/railgun-ui" }
ui = { path = "../../crates/ui" }
wallet-ops = { path = "../../crates/wallet-ops" }

[lints]
workspace = true
