[package]
name = "broadcaster-monitor-waku"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
broadcaster-monitor = { path = "../broadcaster-monitor" }
config = { path = "../config" }
eyre = { workspace = true }
fees = { path = "../fees" }
humantime-serde = "1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing = { workspace = true }
waku = { path = "../waku" }
waku-relay = { path = "../waku-relay" }

[dev-dependencies]
libp2p = { version = "0.56" }

[lints]
workspace = true
