[package]
name = "config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-dyn-abi = "1.5"
serde = { workspace = true }
humantime-serde = { version = "1" }
url = { version = "2", features = ["serde"] }

[lints]
workspace = true
