[package]
name = "broadcaster-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
kanal = { version = "0.1", features = ["async"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

broadcaster-core = { path = "../core" }
config = { path = "../config" }
fees = { path = "../fees" }
poi = { path = "../poi" }
tx-submit = { path = "../tx-submit" }
waku-relay = { path = "../waku-relay" }

[lints]
workspace = true
