[package]
name = "tx-submit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
broadcaster-core = { path = "../core" }
config = { path = "../config" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "2" }
tracing = { workspace = true }

[lints]
workspace = true
