[package]
name = "wallet-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["provider-http", "rpc-types", "network", "signers"] }
eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

broadcaster-core = { path = "../core" }
local-db = { path = "../local-db" }
railgun-wallet = { path = "../railgun-wallet" }
sync-service = { path = "../sync-service" }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
